Fix remaining Learn area notes

--- a/files/en-us/learn/common_questions/what_is_a_url/index.html
+++ b/files/en-us/learn/common_questions/what_is_a_url/index.html
@@ -46,8 +46,7 @@ https://developer.mozilla.org/en-US/search?q=URL</pre>
 <img alt="full  url" src="mdn-url-all.png">
 
 <div class="notecard note">
-  <h4>Tip</h4>
-  <p>You might think of a URL like a regular postal mail address: the <em>scheme</em> represents the postal service you want to use, the <em>domain name</em> is the city or town, and the <em>port</em> is like the zip code; the <em>path</em> represents the building where your mail should be delivered; the <em>parameters</em> represent extra information such as the number of the apartment in the building; and, finally, the <em>anchor</em> represents the actual person to whom you've addressed your mail.</p>
+  <p><strong>Note:</strong> You might think of a URL like a regular postal mail address: the <em>scheme</em> represents the postal service you want to use, the <em>domain name</em> is the city or town, and the <em>port</em> is like the zip code; the <em>path</em> represents the building where your mail should be delivered; the <em>parameters</em> represent extra information such as the number of the apartment in the building; and, finally, the <em>anchor</em> represents the actual person to whom you've addressed your mail.</p>
 </div>
 
 <div class="notecard note">
