--- a/files/en-us/learn/css/building_blocks/values_and_units/index.html
+++ b/files/en-us/learn/css/building_blocks/values_and_units/index.html
@@ -300,8 +300,7 @@ tags:
 <p><strong>In this example, try changing the alpha channel values to see how it affects the color output. </strong></p>
 
 <div class="notecard note">
-<h4>Note:</h4>
-<p>As of CSS Colors Level 4, <code>rgba()</code> is an alias for <code>rgb()</code> and <code>hsla()</code> is an alias for <code>hsl()</code> (see below).In browsers that implement the Level 4 standard, they accept the same parameters and behave the same way. So for example both <code>rgba()</code> and <code>rgb()</code> accept colors with and without alpha channel values. Try changing the above example's <code>rgba()</code> functions to <code>rgb()</code> and see if the colors still work! Which style you use is up to you, but separating out non-transparent and transparent color definitions to use the different functions gives (very) slightly better browser support and can act as a visual indicator of where transparent colors are being defined in your code.</p>
+<p><strong>Note:</strong> As of CSS Colors Level 4, <code>rgba()</code> is an alias for <code>rgb()</code> and <code>hsla()</code> is an alias for <code>hsl()</code> (see below).In browsers that implement the Level 4 standard, they accept the same parameters and behave the same way. So for example both <code>rgba()</code> and <code>rgb()</code> accept colors with and without alpha channel values. Try changing the above example's <code>rgba()</code> functions to <code>rgb()</code> and see if the colors still work! Which style you use is up to you, but separating out non-transparent and transparent color definitions to use the different functions gives (very) slightly better browser support and can act as a visual indicator of where transparent colors are being defined in your code.</p>
 </div>
 
 <h3 id="HSL_and_HSLA_values">HSL and HSLA values</h3>
