--- a/files/en-us/learn/css/css_layout/fundamental_layout_comprehension/index.html
+++ b/files/en-us/learn/css/css_layout/fundamental_layout_comprehension/index.html
@@ -33,7 +33,7 @@ tags:
 <p>This starting point has all of the content of your layout as displayed by the browser in normal flow.</p>
 
 <div class="notecard note">
-<p>If you don't want to work locally then using a tool such as CodePen or jsFiddle will work as well. You will need to upload the images using their Assets functionality and replace the value in the src attribute to point to the new image location.</p>
+<p><strong>Note:</strong> If you don't want to work locally then using a tool such as CodePen or jsFiddle will work as well. You will need to upload the images using their Assets functionality and replace the value in the src attribute to point to the new image location.</p>
 </div>
 
 <p><img alt="" src="layout-task-start.png"></p>
