--- a/files/en-us/learn/css/css_layout/responsive_design/index.html
+++ b/files/en-us/learn/css/css_layout/responsive_design/index.html
@@ -259,7 +259,7 @@ h1 {
 <p>This means that we only need to specify the font size for the heading once, rather than set it up for mobile and redefine it in the media queries. The font then gradually increases as you increase the size of the viewport.</p>
 
 <div class="notecard note">
-<p>See an example of this in action: <a href="https://mdn.github.io/css-examples/learn/rwd/type-vw.html">example</a>, <a href="https://github.com/mdn/css-examples/blob/master/learn/rwd/type-vw.html">source code</a>.</p>
+<p><strong>Note:</strong> See an example of this in action: <a href="https://mdn.github.io/css-examples/learn/rwd/type-vw.html">example</a>, <a href="https://github.com/mdn/css-examples/blob/master/learn/rwd/type-vw.html">source code</a>.</p>
 </div>
 
 <h2 id="The_viewport_meta_tag">The viewport meta tag</h2>
