--- a/files/en-us/learn/css/howto/add_a_shadow/index.html
+++ b/files/en-us/learn/css/howto/add_a_shadow/index.html
@@ -33,8 +33,7 @@ tags:
 <p>{{EmbedGHLiveSample("css-examples/howto/box-shadow-button.html", '100%', 500)}}</p>
 
 <div class="notecard note">
-  <h3>Note</h3>
-  <p>We are not using <code>inset</code> in this example, this means that the shadow is the default drop shadow with the box on top of the shadow. Inset shadows appear inside the box as if the content were pushed back into the page.</p>
+  <p><strong>Note:</strong> We are not using <code>inset</code> in this example, this means that the shadow is the default drop shadow with the box on top of the shadow. Inset shadows appear inside the box as if the content were pushed back into the page.</p>
 </div>
 
 <h2 id="See_also">See also</h2>
