--- a/files/en-us/learn/css/howto/add_a_text_shadow/index.html
+++ b/files/en-us/learn/css/howto/add_a_text_shadow/index.html
@@ -31,6 +31,5 @@ tags:
 <p>{{EmbedGHLiveSample("css-examples/howto/text-shadow.html", '100%', 500)}}</p>
 
 <div class="notecard note">
-  <h3>Note</h3>
-  <p>It can be quite easy to make text hard to read with text shadows. Make sure that the choices you make still leave your text readable and provide enough <a href="/en-US/docs/Web/Accessibility/Understanding_WCAG/Perceivable/Color_contrast">color contrast</a> for visitors who have difficulty with low-contrast text.</p>
+  <p><strong>Note:</strong> It can be quite easy to make text hard to read with text shadows. Make sure that the choices you make still leave your text readable and provide enough <a href="/en-US/docs/Web/Accessibility/Understanding_WCAG/Perceivable/Color_contrast">color contrast</a> for visitors who have difficulty with low-contrast text.</p>
 </div>
