--- a/files/en-us/learn/css/howto/transition_button/index.html
+++ b/files/en-us/learn/css/howto/transition_button/index.html
@@ -26,8 +26,7 @@ tags:
 <p>{{EmbedGHLiveSample("css-examples/howto/transition-button.html", '100%', 720)}}</p>
 
 <div class="notecard note">
-  <h3>Note</h3>
-  <p>The {{cssxref("transition")}} property is a shorthand for {{cssxref("transition-delay")}}, {{cssxref("transition-duration")}}, {{cssxref("transition-property")}}, and {{cssxref("transition-timing-function")}}. See the pages for these properties on MDN to find ways to tweak your transitions.</p>
+  <p><strong>Note:</strong> The {{cssxref("transition")}} property is a shorthand for {{cssxref("transition-delay")}}, {{cssxref("transition-duration")}}, {{cssxref("transition-property")}}, and {{cssxref("transition-timing-function")}}. See the pages for these properties on MDN to find ways to tweak your transitions.</p>
 </div>
 
 
