--- a/files/en-us/learn/css/styling_text/styling_links/index.html
+++ b/files/en-us/learn/css/styling_text/styling_links/index.html
@@ -65,8 +65,7 @@ tags:
 <p>{{ EmbedLiveSample('Default_styles', '100%', 120) }}</p>
 
 <div class="notecard note">
-  <h4>Note:</h4>
-<p>All the links in the examples on this page are fake links — a <code>#</code> (hash/pound sign) is put in place of the real URL. This is because if the real links were included, clicking on them would break the examples (you'd end up with an error or a page loaded in the embedded example that you couldn't get back from.) <code>#</code> just links to the current page.</p>
+<p><strong>Note:</strong> All the links in the examples on this page are fake links — a <code>#</code> (hash/pound sign) is put in place of the real URL. This is because if the real links were included, clicking on them would break the examples (you'd end up with an error or a page loaded in the embedded example that you couldn't get back from.) <code>#</code> just links to the current page.</p>
 </div>
 
 <p>You'll notice a few things as you explore the default styles:</p>
@@ -347,13 +346,11 @@ a[href*="#"] {
 <p>So that's it. Try revisiting the active learning section above and trying this new technique out!</p>
 
 <div class="notecard note">
-  <h4>Note:</h4>
-<p>The <code>href</code> values look strange — we've used dummy links here that don't really go anywhere. The reason for this is that if we used real links, you would be able to load an external site in the <code>&lt;iframe&gt;</code> the live example is embedded in, thereby losing the example.</p>
+<p><strong>Note:</strong> The <code>href</code> values look strange — we've used dummy links here that don't really go anywhere. The reason for this is that if we used real links, you would be able to load an external site in the <code>&lt;iframe&gt;</code> the live example is embedded in, thereby losing the example.</p>
 </div>
 
 <div class="notecard note">
-  <h4>Note:</h4>
-<p>Don't worry if you are not familiar with <a href="/en-US/docs/Learn/CSS/Building_blocks">backgrounds</a> and <a href="/en-US/docs/Web/Progressive_web_apps/Responsive/responsive_design_building_blocks">responsive web design</a> yet; these are explained in other places.</p>
+<p><strong>Note:</strong> Don't worry if you are not familiar with <a href="/en-US/docs/Learn/CSS/Building_blocks">backgrounds</a> and <a href="/en-US/docs/Web/Progressive_web_apps/Responsive/responsive_design_building_blocks">responsive web design</a> yet; these are explained in other places.</p>
 </div>
 
 <h2 id="Styling_links_as_buttons">Styling links as buttons</h2>
@@ -432,8 +429,7 @@ a:active {
 </ul>
 
 <div class="notecard note">
-  <h4>Note:</h4>
-<p>You may have noticed that the list items in the HTML are all put on the same line as each other. This is done because spaces/line breaks in between inline block elements create spaces on the page, just like the spaces in between words; however, such spaces would break our horizontal navigation menu layout. So we've removed them. You can find more information about this problem (and solutions) at <a href="https://css-tricks.com/fighting-the-space-between-inline-block-elements/">Fighting the space between inline block elements</a>.</p>
+<p><strong>Note:</strong> You may have noticed that the list items in the HTML are all put on the same line as each other. This is done because spaces/line breaks in between inline block elements create spaces on the page, just like the spaces in between words; however, such spaces would break our horizontal navigation menu layout. So we've removed them. You can find more information about this problem (and solutions) at <a href="https://css-tricks.com/fighting-the-space-between-inline-block-elements/">Fighting the space between inline block elements</a>.</p>
 </div>
 
 <h2 id="Test_your_skills!">Test your skills!</h2>
