--- a/files/en-us/learn/forms/html5_input_types/index.html
+++ b/files/en-us/learn/forms/html5_input_types/index.html
@@ -114,7 +114,8 @@ tags:
 
 <p><img alt="firefox for android email keyboard, with ampersand displayed by default." src="fx-android-url-type-keyboard.jpg"></p>
 
-<div class="note"><strong>Note:</strong> Just because the URL is well-formed doesn't necessarily mean that it refers to a location that actually exists!</div>
+<div class="note">
+<p><strong>Note:</strong> Just because the URL is well-formed doesn't necessarily mean that it refers to a location that actually exists!</p></div>
 
 <h2 id="Numeric_field">Numeric field</h2>
 
