--- a/files/en-us/learn/getting_started_with_the_web/css_basics/index.html
+++ b/files/en-us/learn/getting_started_with_the_web/css_basics/index.html
@@ -263,13 +263,11 @@ p, li {
 <p>The {{htmlelement("body")}} is a <strong>block</strong> element, meaning it takes up space on the page. The margin applied to a block element will be respected by other elements on the page. In contrast, images are <strong>inline</strong> elements, for the auto margin trick to work on this image, we must give it block-level behavior using <code>display: block;</code>.</p>
 
 <div class="notecard note">
-  <h4>Note:</h4>
-<p>The instructions above assume that you're using an image smaller than the width set on the body. (600 pixels) If your image is larger, it will overflow the body, spilling into the rest of the page. To fix this, you can either: 1) reduce the image width using a <a href="https://en.wikipedia.org/wiki/Raster_graphics_editor">graphics editor</a>, or 2) use CSS to size the image by setting the {{cssxref("width")}} property on the <code>&lt;img&gt;</code> element with a smaller value.</p>
+<p><strong>Note:</strong> The instructions above assume that you're using an image smaller than the width set on the body. (600 pixels) If your image is larger, it will overflow the body, spilling into the rest of the page. To fix this, you can either: 1) reduce the image width using a <a href="https://en.wikipedia.org/wiki/Raster_graphics_editor">graphics editor</a>, or 2) use CSS to size the image by setting the {{cssxref("width")}} property on the <code>&lt;img&gt;</code> element with a smaller value.</p>
 </div>
 
 <div class="notecard note">
-  <h4>Note:</h4>
-<p>Don't be too concerned if you don't completely understand <code>display: block;</code> or the differences between a block element and an inline element. It will make more sense as you continue your study of CSS. You can find more information about different display values on MDN's <a href="/en-US/docs/Web/CSS/display">display reference page</a>.</p>
+<p><strong>Note:</strong> Don't be too concerned if you don't completely understand <code>display: block;</code> or the differences between a block element and an inline element. It will make more sense as you continue your study of CSS. You can find more information about different display values on MDN's <a href="/en-US/docs/Web/CSS/display">display reference page</a>.</p>
 </div>
 
 <h2 id="Conclusion">Conclusion</h2>
