--- a/files/en-us/learn/getting_started_with_the_web/html_basics/index.html
+++ b/files/en-us/learn/getting_started_with_the_web/html_basics/index.html
@@ -127,7 +127,7 @@ tags:
 <p>Try coming up with some better alt text for your image now.</p>
 
 <div class="note">
-<p>Find out more about accessibility in our <a href="/en-US/docs/Learn/Accessibility">accessibility learning module</a>.</p>
+<p><strong>Note:</strong> Find out more about accessibility in our <a href="/en-US/docs/Learn/Accessibility">accessibility learning module</a>.</p>
 </div>
 
 <h2 id="Marking_up_text">Marking up text</h2>
@@ -206,7 +206,7 @@ tags:
 <p>You might get unexpected results if you omit the <code>https://</code> or <code>http://</code> part, called the <em>protocol</em>, at the beginning of the web address. After making a link, click it to make sure it is sending you where you wanted it to.</p>
 
 <div class="note">
-<p><code>href</code> might appear like a rather obscure choice for an attribute name at first. If you are having trouble remembering it, remember that it stands for <em><strong>h</strong>ypertext <strong>ref</strong>erence</em>.</p>
+<p><strong>Note:</strong> <code>href</code> might appear like a rather obscure choice for an attribute name at first. If you are having trouble remembering it, remember that it stands for <em><strong>h</strong>ypertext <strong>ref</strong>erence</em>.</p>
 </div>
 
 <p>Add a link to your page now, if you haven't already done so.</p>
