--- a/files/en-us/learn/html/howto/use_javascript_within_a_webpage/index.html
+++ b/files/en-us/learn/html/howto/use_javascript_within_a_webpage/index.html
@@ -29,7 +29,7 @@ tags:
 <p>{{Glossary("JavaScript")}} is a programming language mostly used client-side to make webpages interactive. You <em>can</em> create amazing webpages without JavaScript, but JavaScript opens up a whole new level of possibilities.</p>
 
 <div class="note">
-<p>In this article we're going over the HTML code you need to make JavaScript take effect. If you want to learn JavaScript itself, you can start with our <a href="/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics">JavaScript basics</a> article. If you already know something about JavaScript or if you have a background with other programming languages, we suggest you jump directly into our <a href="/en-US/docs/Web/JavaScript/Guide">JavaScript Guide</a>.</p>
+<p><strong>Note:</strong> In this article we're going over the HTML code you need to make JavaScript take effect. If you want to learn JavaScript itself, you can start with our <a href="/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics">JavaScript basics</a> article. If you already know something about JavaScript or if you have a background with other programming languages, we suggest you jump directly into our <a href="/en-US/docs/Web/JavaScript/Guide">JavaScript Guide</a>.</p>
 </div>
 
 <h2 id="How_to_trigger_JavaScript_from_HTML">How to trigger JavaScript from HTML</h2>
