--- a/files/en-us/learn/html/introduction_to_html/html_text_fundamentals/index.html
+++ b/files/en-us/learn/html/introduction_to_html/html_text_fundamentals/index.html
@@ -911,7 +911,7 @@ textarea.onkeyup = function(){
 </ul>
 
 <div class="note">
-<p>A kind warning about underline: <strong>People strongly associate underlining with hyperlinks.</strong> Therefore, on the web, it's best to underline only links. Use the <code>&lt;u&gt;</code> element when it's semantically appropriate, but consider using CSS to change the default underline to something more appropriate on the web. The example below illustrates how it can be done.</p>
+<p><strong>Note:</strong> People strongly associate underlining with hyperlinks. Therefore, on the web, it's best to underline only links. Use the <code>&lt;u&gt;</code> element when it's semantically appropriate, but consider using CSS to change the default underline to something more appropriate on the web. The example below illustrates how it can be done.</p>
 </div>
 
 <pre class="brush: html">&lt;!-- scientific names --&gt;
