--- a/files/en-us/learn/html/introduction_to_html/index.html
+++ b/files/en-us/learn/html/introduction_to_html/index.html
@@ -14,7 +14,7 @@ tags:
 ---
 <div>{{LearnSidebar}}</div>
 
-<p class="summary">At its heart, {{glossary("HTML")}} is a fairly simple language made up of {{Glossary("Element","elements")}}, which can be applied to pieces of text to give them different meaning in a document (Is it a paragraph? Is it a bulleted list? Is it part of a table?), structure a document into logical sections (Does it have a header? Three columns of content? A navigation menu?), and embed content such as images and videos into a page. This module will introduce the first two of these and introduce fundamental concepts and syntax you need to know to understand HTML.</p>
+<p>At its heart, {{glossary("HTML")}} is a fairly simple language made up of {{Glossary("Element","elements")}}, which can be applied to pieces of text to give them different meaning in a document (Is it a paragraph? Is it a bulleted list? Is it part of a table?), structure a document into logical sections (Does it have a header? Three columns of content? A navigation menu?), and embed content such as images and videos into a page. This module will introduce the first two of these and introduce fundamental concepts and syntax you need to know to understand HTML.</p>
 
 <div class="callout">
   <h4 id="Looking_to_become_a_front-end_web_developer">Looking to become a front-end web
@@ -67,8 +67,6 @@ tags:
  <dd>This assessment tests your ability to use HTML to structure a simple page of content, containing a header, a footer, a navigation menu, main content, and a sidebar.</dd>
 </dl>
 
-<div class="note">
-<h4 id="Feedback">Feedback</h4>
-
+<div class="callout">
 <p>Help us improve our guides and tutorials like this one by taking <a href="https://www.surveygizmo.com/s3/4871248/MDN-Guides-Survey">our survey here</a>.</p>
 </div>
