--- a/files/en-us/learn/javascript/building_blocks/build_your_own_function/index.html
+++ b/files/en-us/learn/javascript/building_blocks/build_your_own_function/index.html
@@ -198,7 +198,9 @@ panel.appendChild(closeBtn);</pre>
 <ol>
  <li>First of all, download the icons needed for this exercise (<a href="https://github.com/mdn/learning-area/blob/master/javascript/building-blocks/functions/icons/warning.png">warning</a> and <a href="https://github.com/mdn/learning-area/blob/master/javascript/building-blocks/functions/icons/chat.png">chat</a>) from GitHub. Save them in a new folder called <code>icons</code> in the same location as your HTML file.
 
-  <div class="note"><strong>Note</strong>: The warning and chat icons were originally found on <a href="https://www.iconfinder.com/">iconfinder.com</a>, and designed by <a href="https://www.iconfinder.com/nazarr">Nazarrudin Ansyari</a> — Thanks! (The actual icon pages were since moved or removed.)</div>
+  <div class="note">
+  <p><strong>Note:</strong> The warning and chat icons were originally found on <a href="https://www.iconfinder.com/">iconfinder.com</a>, and designed by <a href="https://www.iconfinder.com/nazarr">Nazarrudin Ansyari</a> — Thanks! (The actual icon pages were since moved or removed.)</p>
+  </div>
  </li>
  <li>Next, find the CSS inside your HTML file. We'll make a few changes to make way for the icons. First, update the <code>.msgBox</code> width from:
   <pre class="brush: css">width: 200px;</pre>
