--- a/files/en-us/learn/javascript/building_blocks/functions/index.html
+++ b/files/en-us/learn/javascript/building_blocks/functions/index.html
@@ -121,7 +121,7 @@ myFunction();
 // calls the function once</pre>
 
 <div class="notecard note">
-<p>This form of creating a function is also known as <em>function declaration</em>. It is always hoisted, so you can call function above function definition and it will work fine.</p>
+<p><strong>Note:</strong> This form of creating a function is also known as <em>function declaration</em>. It is always hoisted, so you can call function above function definition and it will work fine.</p>
 </div>
 
 <h2 id="Anonymous_functions">Anonymous functions</h2>
@@ -155,7 +155,7 @@ myButton.onclick = function() {
 }</pre>
 
 <div class="notecard note">
-<p>This form of creating a function is also known as <em>function expression</em>. Unlike function declaration, function expressions are not hoisted.</p>
+<p><strong>Note:</strong> This form of creating a function is also known as <em>function expression</em>. Unlike function declaration, function expressions are not hoisted.</p>
 </div>
 
 <p>This function could now be invoked using:</p>
