--- a/files/en-us/learn/javascript/first_steps/arrays/index.html
+++ b/files/en-us/learn/javascript/first_steps/arrays/index.html
@@ -73,7 +73,9 @@ let random = ['tree', 795, [0, 1, 2]];</pre>
 shopping;
 // shopping will now return [ "tahini", "milk", "cheese", "hummus", "noodles" ]</pre>
 
-  <div class="note"><strong>Note</strong>: We've said it before, but just as a reminder — computers start counting from 0!</div>
+  <div class="note">
+  <p><strong>Note:</strong> We've said it before, but just as a reminder — computers start counting from 0!</p>
+  </div>
  </li>
  <li>Note that an array inside an array is called a multidimensional array. You can access an item inside an array that is itself inside another array by chaining two sets of square brackets together. For example, to access one of the items inside the array that is the third item inside the <code>random</code> array (see previous section), we could do something like this:
   <pre class="brush: js">random[2][2];</pre>
