--- a/files/en-us/learn/server-side/first_steps/client-server_overview/index.html
+++ b/files/en-us/learn/server-side/first_steps/client-server_overview/index.html
@@ -71,7 +71,7 @@ tags:
 <p>You can make a simple <code>GET</code> request by clicking on a link or searching on a site (like a search engine homepage). For example, the HTTP request that is sent when you perform a search on MDN for the term "client server overview" will look a lot like the text shown below (it will not be identical because parts of the message depend on your browser/setup).</p>
 
 <div class="note">
-<p>The format of HTTP messages is defined in a "web standard" (<a href="https://www.rfc-editor.org/rfc/rfc7230.txt">RFC7230</a>). You don't need to know this level of detail, but at least now you know where this all came from!</p>
+<p><strong>Note:</strong> The format of HTTP messages is defined in a "web standard" (<a href="https://www.rfc-editor.org/rfc/rfc7230.txt">RFC7230</a>). You don't need to know this level of detail, but at least now you know where this all came from!</p>
 </div>
 
 <h4 id="The_request">The request</h4>
