--- a/files/en-us/learn/tools_and_testing/client-side_javascript_frameworks/svelte_deployment_next/index.html
+++ b/files/en-us/learn/tools_and_testing/client-side_javascript_frameworks/svelte_deployment_next/index.html
@@ -78,7 +78,7 @@ tags:
 <p>By default, when you create a new app with <code>npx degit sveltejs/template my-svelte-project</code>, Svelte will use <a href="https://rollupjs.org/">rollup</a> as the module bundler.</p>
 
 <div class="notecard note">
-<p>Note: There is also an official template for using <a href="https://webpack.js.org/">webpack</a> and also many <a href="https://github.com/sveltejs/integrations#bundler-plugins">community-maintained plugins</a> for other bundlers.</p>
+<p><strong>Note:</strong> There is also an official template for using <a href="https://webpack.js.org/">webpack</a> and also many <a href="https://github.com/sveltejs/integrations#bundler-plugins">community-maintained plugins</a> for other bundlers.</p>
 </div>
 
 <p>In the file <code>package.json</code> you can see that the <code>dev</code> and <code>start</code> scripts are just calling rollup:</p>
