--- a/files/en-us/learn/tools_and_testing/cross_browser_testing/your_own_automation_environment/index.html
+++ b/files/en-us/learn/tools_and_testing/cross_browser_testing/your_own_automation_environment/index.html
@@ -236,7 +236,7 @@ var driver = new webdriver.Builder()
 <pre class="brush: js"><span class="nx">driver</span><span class="p">.</span><span class="nx">get</span><span class="p">(</span><span class="s1">'http://www.google.com'</span><span class="p">);</span></pre>
 
 <div class="note">
-<p><span class="p"><strong>Note</strong>: See the <a href="https://seleniumhq.github.io/selenium/docs/api/javascript/module/selenium-webdriver/lib/webdriver_exports_WebDriver.html">WebDriver class reference</a> for details of the features in this section and the ones below it.</span></p>
+<p><strong>Note:</strong> See the <a href="https://seleniumhq.github.io/selenium/docs/api/javascript/module/selenium-webdriver/lib/webdriver_exports_WebDriver.html">WebDriver class reference</a> for details of the features in this section and the ones below it.</p>
 </div>
 
 <p>You can use any URL to point to your resource, including a <code>file://</code> URL to test a local document:</p>
