--- a/files/en-us/learn/accessibility/html/index.html
+++ b/files/en-us/learn/accessibility/html/index.html
@@ -22,7 +22,7 @@ tags:
 
 <div>{{PreviousMenuNext("Learn/Accessibility/What_is_Accessibility","Learn/Accessibility/CSS_and_JavaScript", "Learn/Accessibility")}}</div>
 
-<p class="summary">A great deal of web content can be made accessible just by making sure the correct Hypertext Markup Language elements are used for the correct purpose at all times. This article looks in detail at how HTML can be used to ensure maximum accessibility.</p>
+<p>A great deal of web content can be made accessible just by making sure the correct Hypertext Markup Language elements are used for the correct purpose at all times. This article looks in detail at how HTML can be used to ensure maximum accessibility.</p>
 
 <table>
  <tbody>
@@ -268,7 +268,7 @@ This is the second subsection of my content. I think is more interesting than th
 <p><img alt="" src="button-focused-unfocused.png"></p>
 
 <div class="notecard note">
-<p>From Firefox 84 you can also enable an overlay that shows the page tabbing order. For more information see: <a href="/en-US/docs/Tools/Accessibility_inspector#show_web_page_tabbing_order">Accessibility Inspector &gt; Show web page tabbing order</a>.</p>
+<p><strong>Note:</strong> From Firefox 84 you can also enable an overlay that shows the page tabbing order. For more information see: <a href="/en-US/docs/Tools/Accessibility_inspector#show_web_page_tabbing_order">Accessibility Inspector &gt; Show web page tabbing order</a>.</p>
 </div>
 
 <p>You can then press Enter/Return to follow a focused link or press a button (we've included some JavaScript to make the buttons alert a message), or start typing to enter text in a text input. Other form elements have different controls, for example, the {{htmlelement("select")}} element can have its options displayed and cycled between using the up and down arrow keys.</p>
@@ -392,7 +392,7 @@ This is the second subsection of my content. I think is more interesting than th
 <p>As an added bonus, in most browsers associating a label with a form input means that you can click the label to select or activate the form element. This gives the input a bigger hit area, making it easier to select.</p>
 
 <div class="note">
-<p><strong>Note:</strong> you can see some good and bad form examples in <a href="https://mdn.github.io/learning-area/accessibility/html/good-form.html">good-form.html</a> and <a href="https://mdn.github.io/learning-area/accessibility/html/bad-form.html">bad-form.html</a>.</p>
+<p><strong>Note:</strong> You can see some good and bad form examples in <a href="https://mdn.github.io/learning-area/accessibility/html/good-form.html">good-form.html</a> and <a href="https://mdn.github.io/learning-area/accessibility/html/bad-form.html">bad-form.html</a>.</p>
 </div>
 
 <p>You can find a nice explanation of the importance of proper text labels, and how to investigate text label issues using the <a href="/en-US/docs/Tools/Accessibility_inspector">Firefox Accessibility Inspector</a>, in the following video:</p>
@@ -520,7 +520,7 @@ This is the second subsection of my content. I think is more interesting than th
 <p>The reason to use an empty <code>alt</code> instead of not including it is because many screen readers announce the whole image URL if no <code>alt</code> is provided. In the above example, the image is acting as a visual decoration to the heading it's associated with. In cases like this, and in cases where an image is only decoration and has no content value, you should include an empty <code>alt</code> in your <code>img</code> elements. Another alternative is to use the aria <code><a href="/en-US/docs/Web/accessibility/ARIA/roles">role</a></code> attribute <code><a href="/en-US/docs/Web/accessibility/ARIA/roles/presentation_role">role="presentation"</a></code> as this also stops screen readers from reading out alternative text.</p>
 
 <div class="note">
-<p><strong>Note:</strong> if possible you should use CSS to display images that are only decorative.</p>
+<p><strong>Note:</strong> If possible you should use CSS to display images that are only decorative.</p>
 </div>
 
 <h2 id="More_on_links">More on links</h2>
