--- a/files/en-us/learn/common_questions/design_for_all_types_of_users/index.html
+++ b/files/en-us/learn/common_questions/design_for_all_types_of_users/index.html
@@ -46,7 +46,7 @@ tags:
 <p>Let's download and install the Paciello Group's <a href="http://www.paciellogroup.com/resources/contrastanalyser/">Color Contrast Analyser</a>.</p>
 
 <div class="note">
-<p>Note: Alternatively you can find a number of contrast checkers online, such as WebAIM's <a href="https://webaim.org/resources/contrastchecker/">Color Contrast Checker</a>. We suggest a local checker because it comes packaged with an on-screen color picker to find out a color value.</p>
+<p><strong>Note:</strong> Alternatively you can find a number of contrast checkers online, such as WebAIM's <a href="https://webaim.org/resources/contrastchecker/">Color Contrast Checker</a>. We suggest a local checker because it comes packaged with an on-screen color picker to find out a color value.</p>
 </div>
 
 <p>For instance, let's test the colors on this page and see how we fare in the color Contrast Analyser:</p>
@@ -200,7 +200,7 @@ span.subheading { font-size:1rem; } /* original size */</pre>
 <p>If the image can be described succinctly, you can provide an <code>alt</code> attribute and nothing more. If the image cannot be described succinctly, you will have to either provide the same content in another form in the same page (e.g., complement a pie chart with a table providing the same data), or resort to a <code>longdesc</code> attribute. This attribute's value is a URL pointing towards a resource explicitly describing in detail the image's content.</p>
 
 <div class="note">
-<p>Note: the use and even the existence of <code>longdesc</code> has been debated for quite some time. Please refer to the W3C's <a href="https://www.w3.org/TR/html-longdesc/">Image Description Extension (longdesc)</a> for the full explanation and thorough examples.</p>
+<p><strong>Note:</strong> The use and even the existence of <code>longdesc</code> has been debated for quite some time. Please refer to the W3C's <a href="https://www.w3.org/TR/html-longdesc/">Image Description Extension (longdesc)</a> for the full explanation and thorough examples.</p>
 </div>
 
 <h4 id="Audiovideo">Audio/video</h4>
