--- a/files/en-us/learn/common_questions/how_much_does_it_cost/index.html
+++ b/files/en-us/learn/common_questions/how_much_does_it_cost/index.html
@@ -8,9 +8,7 @@ tags:
   - hosting
   - web development tools
 ---
-<div class="summary">
 <p>Getting involved on the Web isn't as cheap as it looks. In this article we discuss how much you may have to spend, and why.</p>
-</div>
 
 <table>
  <tbody>
@@ -95,7 +93,7 @@ tags:
 <p>Hosting providers charge you according to how much {{Glossary("Bandwidth", "bandwidth")}} your website consumes. This depends on how many people, and Web crawling robots, access your content during a given time, and how much server space your content takes up. This is why people usually store their videos on dedicated services such as YouTube, Dailymotion, and Vimeo. For example, your provider may have a plan that includes up to several thousand visitors per day, for “reasonable” bandwidth usage. Be careful, however as this is defined differently from one hosting provider to another. As a rule of thumb, recognize that reliable, paid, personal hosting can cost around ten to fifteen dollars per month.</p>
 
 <div class="note">
-<p>Note that there is no such thing as “unlimited” bandwidth. If you consume a huge amount of bandwidth, expect to pay a huge amount of money.</p>
+<p><strong>Note:</strong> There is no such thing as “unlimited” bandwidth. If you consume a huge amount of bandwidth, expect to pay a huge amount of money.</p>
 </div>
 
 <h3 id="Domain_names">Domain names</h3>
