--- a/files/en-us/learn/css/building_blocks/backgrounds_and_borders/index.html
+++ b/files/en-us/learn/css/building_blocks/backgrounds_and_borders/index.html
@@ -250,8 +250,7 @@ background-position: 10px 20px,  top right;</pre>
 } </pre>
 
 <div class="notecard note">
-  <h4>Note:</h4>
-  <p>These top, right, bottom, and left border properties also have mapped <em>logical</em> properties that relate to the writing mode of the document (e.g. left-to-right or right-to-left text, or top-to-bottom). We'll be exploring these in the next lesson, which covers <a href="/en-US/docs/Learn/CSS/Building_blocks/Handling_different_text_directions">handling different text directions</a>.</p>
+  <p><strong>Note:</strong> These top, right, bottom, and left border properties also have mapped <em>logical</em> properties that relate to the writing mode of the document (e.g. left-to-right or right-to-left text, or top-to-bottom). We'll be exploring these in the next lesson, which covers <a href="/en-US/docs/Learn/CSS/Building_blocks/Handling_different_text_directions">handling different text directions</a>.</p>
 </div>
 
 <p><strong>There are a variety of styles that you can use for borders. In the example below we have used a different border style for the four sides of my box. Play with the border style, width, and color to see how borders work.</strong></p>
