--- a/files/en-us/learn/css/building_blocks/handling_different_text_directions/index.html
+++ b/files/en-us/learn/css/building_blocks/handling_different_text_directions/index.html
@@ -116,7 +116,7 @@ tags:
 <p>Here we are also using logical margin values to ensure the margin is in the correct place no matter what the writing mode is.</p>
 
 <div class="notecard note">
-<p>Currently, only Firefox supports flow relative values  for <code>float</code>. If you are using <strong>Google Chrome</strong> or <strong>Microsoft Edge</strong>, you may find that the image did not float.</p>
+<p><strong>Note:</strong> Currently, only Firefox supports flow relative values  for <code>float</code>. If you are using <strong>Google Chrome</strong> or <strong>Microsoft Edge</strong>, you may find that the image did not float.</p>
 </div>
 
 <h3 id="Should_you_use_physical_or_logical_properties">Should you use physical or logical properties?</h3>
