--- a/files/en-us/learn/css/howto/center_an_item/index.html
+++ b/files/en-us/learn/css/howto/center_an_item/index.html
@@ -22,8 +22,7 @@ tags:
 <p>{{EmbedGHLiveSample("css-examples/howto/center.html", '100%', 700)}}</p>
 
 <div class="notecard note">
-  <h3>Note</h3>
-  <p><strong>Not just for centering</strong>: You can use this technique to do any kind of alignment of one or more elements inside another. In the example above you can try changing the values to any valid values for {{cssxref("justify-content")}} and {{cssxref("align-items")}}.</p>
+  <p><strong>Note:</strong> You can use this technique to do any kind of alignment of one or more elements inside another. In the example above you can try changing the values to any valid values for {{cssxref("justify-content")}} and {{cssxref("align-items")}}.</p>
 </div>
 
 <h2 id="See_also">See also</h2>
