--- a/files/en-us/learn/css/howto/highlight_first_line/index.html
+++ b/files/en-us/learn/css/howto/highlight_first_line/index.html
@@ -26,8 +26,7 @@ tags:
 <p>{{EmbedGHLiveSample("css-examples/howto/highlight_first_line.html", '100%', 750)}}</p>
 
 <div class="notecard note">
-  <h3>Note</h3>
-  <p>All pseudo-elements act in this way. They behave as if you had inserted an element into the document, but they do so dynamically based on the content as it displays at runtime.</p>
+  <p><strong>Note:</strong> All pseudo-elements act in this way. They behave as if you had inserted an element into the document, but they do so dynamically based on the content as it displays at runtime.</p>
 </div>
 
 <h2>Combining pseudo-elements with other selectors</h2>
