--- a/files/en-us/learn/css/howto/index.html
+++ b/files/en-us/learn/css/howto/index.html
@@ -70,6 +70,5 @@ tags:
  </ul>
 
 <div class="notecard note">
-  <h4>The CSS Layout Cookbook</h4>
-  <p>We have a cookbook dedicated to <a href="/en-US/docs/Web/CSS/Layout_cookbook">CSS Layout solutions</a>, with fully worked examples and explanations of common layout tasks.</p>
+  <p><strong>Note:</strong> We have a cookbook dedicated to <a href="/en-US/docs/Web/CSS/Layout_cookbook">CSS Layout solutions</a>, with fully worked examples and explanations of common layout tasks.</p>
 </div>
