--- a/files/en-us/learn/forms/other_form_controls/index.html
+++ b/files/en-us/learn/forms/other_form_controls/index.html
@@ -163,7 +163,9 @@ tags:
 <p><strong>Note:</strong> In the case of multiple choice select boxes, you'll notice that the select box no longer displays the values as drop-down content — instead, all values are displayed at once in a list, with the optional <code><a href="/en-US/docs/Web/HTML/Attributes/size">size</a></code> attribute determining the height of the widget.</p>
 </div>
 
-<div class="note"><strong>Note:</strong> All browsers that support the {{HTMLElement("select")}} element also support the {{htmlattrxref("multiple","select")}} attribute.</div>
+<div class="note">
+<p><strong>Note:</strong> All browsers that support the {{HTMLElement("select")}} element also support the {{htmlattrxref("multiple","select")}} attribute.</p>
+</div>
 
 <h3 id="Autocomplete_box">Autocomplete box</h3>
 
