--- a/files/en-us/learn/html/howto/define_terms_with_html/index.html
+++ b/files/en-us/learn/html/howto/define_terms_with_html/index.html
@@ -54,7 +54,7 @@ tags:
 </pre>
 
 <div class="note">
-<p>Another use for bold is to emphasize content. Bold itself is a concept foreign to HTML, but there are <a href="/en-US/docs/Learn/HTML/Introduction_to_HTML/HTML_text_fundamentals#emphasis_and_importance">tags for indicating emphasis.</a></p>
+<p><strong>Note:</strong> Another use for bold is to emphasize content. Bold itself is a concept foreign to HTML, but there are <a href="/en-US/docs/Learn/HTML/Introduction_to_HTML/HTML_text_fundamentals#emphasis_and_importance">tags for indicating emphasis.</a></p>
 </div>
 
 <h3 id="Special_case_Abbreviations">Special case: Abbreviations</h3>
@@ -67,7 +67,7 @@ tags:
 &lt;/p&gt;</pre>
 
 <div class="note">
-<p>The HTML spec does indeed <a href="https://www.w3.org/TR/html/text-level-semantics.html#the-abbr-element">set aside the <code>title</code> attribute</a> for expanding the abbreviation. However, this is not an acceptable alternative for providing an inline expansion. The contents of <code>title</code> are completely hidden from your users, unless they're using a mouse and they happen to hover over the abbreviation. The spec duly <a href="https://www.w3.org/TR/html/dom.html#attr-title">acknowledges this as well.</a></p>
+<p><strong>Note:</strong> The HTML spec does indeed <a href="https://www.w3.org/TR/html/text-level-semantics.html#the-abbr-element">set aside the <code>title</code> attribute</a> for expanding the abbreviation. However, this is not an acceptable alternative for providing an inline expansion. The contents of <code>title</code> are completely hidden from your users, unless they're using a mouse and they happen to hover over the abbreviation. The spec duly <a href="https://www.w3.org/TR/html/dom.html#attr-title">acknowledges this as well.</a></p>
 </div>
 
 <h3 id="Improve_accessibility">Improve accessibility</h3>
@@ -89,7 +89,7 @@ tags:
 <p>Description lists are just what they claim to be: a list of terms and their matching descriptions (e.g., definition lists, dictionary entries, FAQs, and key-value pairs).</p>
 
 <div class="note">
-<p>Description lists are <a href="https://www.w3.org/TR/html5/grouping-content.html#the-dl-element">not suitable for marking up dialog,</a> because conversation does not directly describe the speakers. Here are <a href="https://www.w3.org/TR/html5/common-idioms.html#conversations">recommendations for marking up dialog</a>.</p>
+<p><strong>Note:</strong> Description lists are <a href="https://www.w3.org/TR/html5/grouping-content.html#the-dl-element">not suitable for marking up dialog,</a> because conversation does not directly describe the speakers. Here are <a href="https://www.w3.org/TR/html5/common-idioms.html#conversations">recommendations for marking up dialog</a>.</p>
 </div>
 
 <p>The terms described go inside {{htmlelement("dt")}} elements. The matching description follows immediately, contained within one or more {{htmlelement("dd")}} elements. Enclose the whole description list with a {{htmlelement("dl")}} element.</p>
@@ -119,7 +119,7 @@ tags:
 </pre>
 
 <div class="note">
-<p>The basic pattern, as you can see, is to alternate <code>&lt;dt&gt;</code> terms with <code>&lt;dd&gt;</code> descriptions. If two or more terms occur in a row, the following description applies to all of them. If two or more descriptions occur in a row, they all apply to the last given term.</p>
+<p><strong>Note:</strong> The basic pattern, as you can see, is to alternate <code>&lt;dt&gt;</code> terms with <code>&lt;dd&gt;</code> descriptions. If two or more terms occur in a row, the following description applies to all of them. If two or more descriptions occur in a row, they all apply to the last given term.</p>
 </div>
 
 <h3 id="Improving_the_visual_output">Improving the visual output</h3>
