--- a/files/en-us/learn/tools_and_testing/client-side_javascript_frameworks/svelte_variables_props/index.html
+++ b/files/en-us/learn/tools_and_testing/client-side_javascript_frameworks/svelte_variables_props/index.html
@@ -297,7 +297,7 @@ $: completedTodos = todos.filter(todo =&gt; todo.completed).length</pre>
 	<pre class="brush: js">$: console.log('newTodoName: ', newTodoName)</pre>
 
 	<div class="notecard note">
-	<p><strong>Note:</strong> as you may have noticed, reactive statements aren't limited to variable declarations. You can put <em>any</em> JavaScript statement after the <code>$:</code> sign.</p>
+	<p><strong>Note:</strong> As you may have noticed, reactive statements aren't limited to variable declarations. You can put <em>any</em> JavaScript statement after the <code>$:</code> sign.</p>
 	</div>
 	</li>
 	<li>
@@ -358,7 +358,7 @@ $: completedTodos = todos.filter(todo =&gt; todo.completed).length</pre>
   }</pre>
 
 	<div class="notecard note">
-	<p><strong>Note:</strong> as you can see, reactive statements are not limited to one-liners. The following would work too, but it is a little less readable: <code>$: newTodoId = totalTodos ? Math.max(...todos.map(t =&gt; t.id)) + 1 : 1</code></p>
+	<p><strong>Note:</strong> As you can see, reactive statements are not limited to one-liners. The following would work too, but it is a little less readable: <code>$: newTodoId = totalTodos ? Math.max(...todos.map(t =&gt; t.id)) + 1 : 1</code></p>
 	</div>
 	</li>
 	<li>
@@ -437,7 +437,7 @@ $: completedTodos = todos.filter(todo =&gt; todo.completed).length</pre>
 </ol>
 
 <div class="notecard note">
-<p>Tip: reactivity can be tricky sometimes. Svelte recognizes <code>filter</code> as a dependency because we are referencing it in the <code>filterTodos(filter, todo)</code> expression. <code>filter</code> is a top-level variable, so we might be tempted to remove it from the helper function params, and just call it like this — <code>filterTodos(todo)</code>. This would work, but now Svelte has no way to find out that <code>{#each filterTodos(todos)... }</code> depends on <code>filter</code>, and the list of filtered todos won't be updated when the filter changes. Always remember that Svelte analyzes our code to find out dependencies, so it's better to be explicit about it and not rely on the visibility of top-level variables. Besides, it's a good practice to make our code clear and explicit about what information it is using.</p>
+<p><strong>Note:</strong> Reactivity can be tricky sometimes. Svelte recognizes <code>filter</code> as a dependency because we are referencing it in the <code>filterTodos(filter, todo)</code> expression. <code>filter</code> is a top-level variable, so we might be tempted to remove it from the helper function params, and just call it like this — <code>filterTodos(todo)</code>. This would work, but now Svelte has no way to find out that <code>{#each filterTodos(todos)... }</code> depends on <code>filter</code>, and the list of filtered todos won't be updated when the filter changes. Always remember that Svelte analyzes our code to find out dependencies, so it's better to be explicit about it and not rely on the visibility of top-level variables. Besides, it's a good practice to make our code clear and explicit about what information it is using.</p>
 </div>
 
 <h2 id="The_code_so_far">The code so far</h2>
