--- a/files/en-us/learn/tools_and_testing/cross_browser_testing/javascript/index.html
+++ b/files/en-us/learn/tools_and_testing/cross_browser_testing/javascript/index.html
@@ -18,7 +18,7 @@ tags:
 
 <div>{{PreviousMenuNext("Learn/Tools_and_testing/Cross_browser_testing/HTML_and_CSS","Learn/Tools_and_testing/Cross_browser_testing/Accessibility", "Learn/Tools_and_testing/Cross_browser_testing")}}</div>
 
-<p class="summary">Now we'll look at common cross-browser JavaScript problems and how to fix them. This includes information on using browser dev tools to track down and fix problems, using Polyfills and libraries to work around problems, getting modern JavaScript features working in older browsers, and more.</p>
+<p>Now we'll look at common cross-browser JavaScript problems and how to fix them. This includes information on using browser dev tools to track down and fix problems, using Polyfills and libraries to work around problems, getting modern JavaScript features working in older browsers, and more.</p>
 
 <table>
  <tbody>
@@ -60,7 +60,7 @@ tags:
  <li>Confusion about <a href="/en-US/docs/Web/JavaScript/Reference/Operators/this">this</a>, in terms of what scope it applies to, and therefore if its value is what you intended. You can read <a href="/en-US/docs/Learn/JavaScript/Objects/Basics#what_is_this">What is "this"?</a> for a light introduction; you should also study examples like <a href="https://github.com/mdn/learning-area/blob/7ed039d17e820c93cafaff541aa65d874dde8323/javascript/oojs/assessment/main.js#L143">this one</a>, which shows a typical pattern of saving a <code>this</code> scope to a separate variable, then using that variable in nested functions so you can be sure you are applying functionality to the correct <code>this</code> scope.</li>
  <li>Incorrectly using functions inside loops that iterate with a global variable (more generally "getting the scope wrong"). For example, in <a href="https://mdn.github.io/learning-area/tools-testing/cross-browser-testing/javascript/bad-for-loop.html">bad-for-loop.html</a> (see <a href="https://github.com/mdn/learning-area/blob/master/tools-testing/cross-browser-testing/javascript/bad-for-loop.html">source code</a>), we loop through 10 iterations using a variable defined with <code>var</code>, each time creating a paragraph and adding an <a href="/en-US/docs/Web/API/GlobalEventHandlers/onclick">onclick</a> event handler to it. When clicked, we want each one to display an alert message containing its number (the value of <code>i</code> at the time it was created). Instead they all report <code>i</code> as 11 — because the <code>for</code> loop does all its iterating before nested functions are invoked.
   <div class="note">
-  <p>The easiest solution is to declare the iteration variable with <code>let</code> instead of <code>var</code>—the value of <code>i</code> associated with the function is then unique to each iteration. Unfortunately this does not work correctly with IE11, which is why we haven't used this approach in the "good" for loop.</p>
+  <p><strong>Note:</strong> The easiest solution is to declare the iteration variable with <code>let</code> instead of <code>var</code>—the value of <code>i</code> associated with the function is then unique to each iteration. Unfortunately this does not work correctly with IE11, which is why we haven't used this approach in the "good" for loop.</p>
   </div>
   <p>If you want this to work correctly, you can define a function to add the handler separately, calling it on each iteration and passing it the current value of <code>para</code> and <code>i</code> each time (or something similar). See <a href="https://mdn.github.io/learning-area/tools-testing/cross-browser-testing/javascript/good-for-loop.html">good-for-loop.html</a> (see the <a href="https://github.com/mdn/learning-area/blob/master/tools-testing/cross-browser-testing/javascript/good-for-loop.html">source code</a> also) for a version that works.</p>
 
@@ -357,7 +357,7 @@ fetch('flowers.jpg').then(function(response) {
 </div>
 
 <div class="note">
-<p class="gh-header-title instapaper_title"><strong>Note</strong>: Again, there are many different ways to make use of the different polyfills you will encounter — consult each polyfill's individual documentation.</p>
+<p><strong>Note:</strong> Again, there are many different ways to make use of the different polyfills you will encounter — consult each polyfill's individual documentation.</p>
 </div>
 
 <p>One thing you might be thinking is "why should we always load the polyfill code, even if we don't need it?" This is a good point — as your sites get more complex and you start to use more libraries, polyfills, etc., you can start to load a lot of extra code, which can start to affect performance, especially on less-powerful devices. It makes sense to only load files as needed.</p>
