--- a/files/en-us/mozilla/firefox/releases/89/index.html
+++ b/files/en-us/mozilla/firefox/releases/89/index.html
@@ -32,6 +32,7 @@ tags:
   <li>The {{cssxref("@media/forced-colors","forced-colors")}} media feature has been implemented ({{bug(1659511)}}).</li>
   <li>The {{cssxref("@font-face/ascent-override", "ascent-override")}}, {{cssxref("@font-face/descent-override", "descent-override")}}, and {{cssxref("@font-face/line-gap-override", "line-gap-override")}} <code>@font-face</code> descriptors have been implemented ({{bug(1681691)}} and {{bug(1704494)}}).</li>
   <li>The <code>type()</code> function for {{cssxref("image-set()","image-set()")}} has been implemented ({{bug(1695404)}}).</li>
+  <li>The {{cssxref("aspect-ratio")}} CSS property is now supported ({{bug(1672073)}}).</li>
 </ul>
 
 <h3 id="JavaScript">JavaScript</h3>
